// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "canFetch": true,
  "pinned": false,
}
`;

exports[`2- fetchAct 1`] = `
Object {
  "canFetch": false,
  "pinned": false,
}
`;

exports[`3- setAct 1`] = `
Object {
  "canFetch": true,
  "pinned": true,
}
`;

exports[`4- setAct 1`] = `
Object {
  "canFetch": true,
  "pinned": false,
}
`;
